Fixed overflow on mobile devices.

--- a/src/app/(website)/docs/[[...id]]/page.module.css
+++ b/src/app/(website)/docs/[[...id]]/page.module.css
@@ -5,6 +5,10 @@
   position: relative;
 }
 
+.content {
+  overflow-x: auto ;
+}
+
 @media screen and (max-width: 992px) {
   .page {
     grid-template-columns: 1fr;
